@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.rtlnow" name="TVNOW - DE" version="2.0.2" provider-name="L0RE">
+<addon id="plugin.video.rtlnow" name="TVNOW - DE" version="2.0.3" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.25.0"/>
 		<import addon="script.common.plugin.cache" version="2.6.0" optional="true"/>
@@ -27,8 +27,9 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 2.0.2  (22.12.2019)[/COLOR][/B] by realvito[CR]
+		<news>[B][COLOR orangered]Version 2.0.3  (23.12.2019)[/COLOR][/B] by realvito[CR]
 - fixed: In der Rubrik = LiveTV werden teilweise keine Bilder angezeigt
+- fixed: Error - wenn Serie in der Mediathek von TVNOW nicht mehr existiert
 		</news>
 	</extension>
 </addon>
