@@ -8,5 +8,6 @@
 - added: Addon kompatibel mit PYTHON-Vers.3 gemacht (für KODI-19+) :-)
 *** für die volle Funktionsfähigkeit unter KODI-Matrix ist das Addon - script.common.plugin.cache - mindestens in der Version 2.6.0 erforderlich ***
 
-[B]Version 2.0.2  (22.12.2019)[/B] by realvito[CR]
+[B]Version 2.0.3  (23.12.2019)[/B] by realvito[CR]
 - fixed: In der Rubrik = LiveTV werden teilweise keine Bilder angezeigt
+- fixed: Error - wenn Serie in der Mediathek von TVNOW nicht mehr existiert
